resources contained another one of my projects (wtf?)